Added function and listeners to handle forms (login and signup) data

--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -22,7 +22,7 @@
                             <img src="data/logo.png" alt="Logo">
                             <p>LOGIN</p>
                     </div>
-                    <form action="">
+                    <form id="loginFormData">
                             <div class="input-container input-email-container">
                                 <img src="/loginPage/data/emailIcon.jpg" alt="EmailIcon">
                                 <input type="text" name="Email" placeholder="Email">
@@ -33,8 +33,8 @@
                             </div>
                     </form>
                     <div class="buttonsContainer">
-                        <button id="forgot">Forgot Password?</button>
-                        <button id="login">LOGIN</button>
+                        <button id="problems" class="btnProblems">Forgot Password?</button>
+                        <button id="login" class="btnSubmit">LOGIN</button>
                     </div>
                 </section>
                 <section class="formContainer signupForm" id="signupForm">
@@ -42,7 +42,7 @@
                             <img src="data/logo.png" alt="Logo">
                             <p>SIGNUP</p>
                     </div>
-                    <form action="">
+                    <form id="signupFormData">
                             <div class="input-container input-email-container">
                                 <img src="/loginPage/data/emailIcon.jpg" alt="EmailIcon">
                                 <input type="text" name="Email" placeholder="Email">
@@ -58,8 +58,8 @@
                     </form>
         
                     <div class="buttonsContainer">
-                        <button id="forgot">Troubles signin up?</button>
-                        <button id="login">SIGN UP</button>
+                        <button id="problems" class="btnProblems">Troubles signin up?</button>
+                        <button id="signup" class="btnSubmit">SIGN UP</button>
                     </div>
                 </section>
                 <section class="orLoginWithContainer">
