Added section categories container modified responsiveness to welcome section container

--- a/homePage/homeBodyComponent/homeBody.html
+++ b/homePage/homeBodyComponent/homeBody.html
@@ -27,11 +27,15 @@
             <div class="welcomeSection">
                 <div class="welcomeContainer">
                     <img src="/homePage/data/WelcomeImage1.jpg" alt="Welcome Image">
-                    <p >...</p>
+                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum asperiores atque, cum perspiciatis molestiae architecto magnam voluptates repudiandae veritatis incidunt laudantium possimus ratione modi adipisci aliquam debitis iusto ipsam mollitia.</p>
                 </div>
                 <div class="welcomeContainer">
                     <img src="/homePage/data/WelcomeImage2.jpg" alt="Welcome Image">
-                    <p >...</p>
+                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, beatae. Voluptates, provident fugit! Dignissimos, temporibus autem! Dolor nam officiis iusto quaerat. Quibusdam labore sit minima illum ratione iste, voluptas cumque?</p>
+                </div>
+                <div class="welcomeContainer">
+                    <img src="/homePage/data/WelcomeImage3.jpg" alt="Welcome Image">
+                    <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam quasi incidunt iure sequi excepturi omnis earum nemo, laudantium laborum repellendus et itaque optio quis pariatur illo ab aliquam expedita ex.</p>
                 </div>
             </div>
             <div class="categoriesSection">
