--- a/homePage/aboutUsSectionComponent/aboutUsSectionComponent.html
+++ b/homePage/aboutUsSectionComponent/aboutUsSectionComponent.html
@@ -18,12 +18,16 @@
             <h2 >About Us</h2>
             <div class="split">
                 <div class="aboutUsContentContainer">
-                    <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur rem optio blanditiis iste reprehenderit, distinctio similique nulla atque? Veniam repudiandae fugit consectetur beatae hic magnam itaque eligendi neque tempore ducimus.</p>
-                    <img src="/homePage/data/about_us_one.jpg" alt="About Us Image">
+                    <div class="text-container">
+                        <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur rem optio blanditiis iste reprehenderit, distinctio similique nulla atque? Veniam repudiandae fugit consectetur beatae hic magnam itaque eligendi neque tempore ducimus.</p>
+                    </div>
+                    <div class="image-box"><img src="/homePage/data/about_us_one.jpg" alt="About Us Image"></div>
                 </div>
                 <div class="aboutUsContentContainer">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio id ab officiis natus soluta harum provident, iure commodi magni earum, nobis hic dolor minima. Sequi animi quibusdam dicta incidunt nobis!</p>
-                    <img src="/homePage/data/about_us_two.jpg" alt="About Us Image">
+                    <div class="text-container">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio id ab officiis natus soluta harum provident, iure commodi magni earum, nobis hic dolor minima. Sequi animi quibusdam dicta incidunt nobis!</p>
+                    </div>
+                    <div class="image-box"><img src="/homePage/data/about_us_two.jpg" alt="About Us Image"></div>
                 </div>
             </div>
         </div>
