--- a/homePage/categoriesSectionComponent/categoriesSectionComponent.html
+++ b/homePage/categoriesSectionComponent/categoriesSectionComponent.html
@@ -19,28 +19,28 @@
             <h2 >Categories</h2>
             <div class="split">
                 <div class="categoryContainer">
-                    <div class="imageContainer">
+                    <div class="image-box">
                         <img src="/homePage/data/fitness.jpg" alt="Category Image">
                     </div>
                     <h3 >Tecnologia e Wearable</h3>
                     <p >Orologi fitness, tracker di attività e altri dispositivi tecnologici per monitorare i tuoi progressi e aiutarti a rimanere motivato.</p>
                 </div>
                 <div class="categoryContainer">
-                    <div class="imageContainer">
+                    <div class="image-box">
                         <img src="/homePage/data/food.jpg" alt="Category Image">
                     </div>
                     <h3>Nutrizione e Integratori</h3>
                     <p>Tutto ciò di cui hai bisogno per supportare il tuo percorso fitness. Proteine, aminoacidi, vitamine e altri integratori per aiutarti a raggiungere i tuoi obiettivi.</p>
                 </div>
                 <div class="categoryContainer">
-                    <div class="imageContainer">
+                    <div class="image-box">
                         <img src="/homePage/data/fitness.jpg" alt="Category Image">
                     </div>
                     <h3 >Tecnologia e Wearable</h3>
                     <p >Orologi fitness, tracker di attività e altri dispositivi tecnologici per monitorare i tuoi progressi e aiutarti a rimanere motivato.</p>
                 </div>
                 <div class="categoryContainer">
-                    <div class="imageContainer">
+                    <div class="image-box">
                         <img src="/homePage/data/food.jpg" alt="Category Image">
                     </div>
                     <h3>Nutrizione e Integratori</h3>
